# lipstick

./: .gitignore  CMakeLists.txt  lipstick.pro
doc/notifications/: doxygen.cfg
doc/src/: notifications.dox
i18n/: README  lipstick-ar_AR.ts  lipstick-ast.ts  lipstick-ca.ts  lipstick-cs.ts  lipstick-da.ts  lipstick-de.ts  lipstick-de_DE.ts  lipstick-el.ts  lipstick-en_GB.ts  lipstick-es.ts  lipstick-es_AR.ts  lipstick-fa.ts  lipstick-fi.ts  lipstick-fr.ts  lipstick-gl.ts  lipstick-he.ts  lipstick-hr.ts  lipstick-hu.ts  lipstick-id.ts  lipstick-it.ts  lipstick-ja.ts  lipstick-kab.ts  lipstick-ko.ts  lipstick-lb.ts  lipstick-mr.ts  lipstick-nb_NO.ts  lipstick-nl.ts  lipstick-nl_BE.ts  lipstick-nl_NL.ts  lipstick-pl.ts  lipstick-prg.ts  lipstick-pt.ts  lipstick-pt_BR.ts  lipstick-pt_PT.ts  lipstick-ro.ts  lipstick-ru.ts  lipstick-sk.ts  lipstick-sv.ts  lipstick-ta.ts  (+5 more)
plugin/: CMakeLists.txt  lipstickplugin.cpp  lipstickplugin.h  plugin.pro
rpm/: lipstick-qt5.spec
src/: CMakeLists.txt  bluetoothagent.cpp  bluetoothagent.h  connectivitymonitor.cpp  homeapplication.cpp  homeapplication.h  homewindow.cpp  lipstick-qt6.pc.in  lipstickapi.cpp  lipstickapi.h  lipstickqmlpath.cpp  lipsticksettings.cpp  lipsticksettings.h  localemanager.cpp  localemanager.h  logging.cpp  logging.h  net.connman.vpn.xml  screenshotservice.cpp  screenshotservice.h  shutdownscreen.cpp  src.pro  usbmodeselector.cpp  usbmodeselector.h  vpnagent.cpp
src/bluetooth/: bluetoothagent.cpp  bluetoothagent.h  bluetoothobexagent.cpp  bluetoothobexagent.h
src/components/: launcherdbus.cpp  launcherdbus.h  launcherfoldermodel.cpp  launcherfoldermodel.h  launcheritem.cpp  launcheritem.h  launchermodel.cpp  launchermodel.h  launchermonitor.cpp  launcherwatchermodel.cpp  launcherwatchermodel.h
src/compositor/: compositor.pri  compositor.xml  fileservice.xml  hwcimage.cpp  hwcimage.h  hwcrenderstage.cpp  hwcrenderstage.h  lipstickcompositor.cpp  lipstickcompositor.h  lipstickcompositorprocwindow.cpp  lipstickcompositorwindow.cpp  lipstickcompositorwindow.h  windowmodel.cpp  windowmodel.h  windowpixmapitem.cpp  windowpixmapitem.h  windowpropertymap.cpp  windowpropertymap.h
src/devicestate/: devicestate.cpp  devicestate.h  displaystate.h  displaystate_p.h  ipcinterface.cpp  thermal.h
src/notificationcategories/: device.removed.conf
src/notifications/: androidprioritystore.cpp  batterynotifier.cpp  categorydefinitionstore.cpp  categorydefinitionstore.h  diskspacenotifier.cpp  lipsticknotification.cpp  lowbatterynotifier.cpp  lowbatterynotifier.h  notificationfeedbackplayer.cpp  notificationmanager.cpp  notificationmanager.h  notificationpreviewpresenter.cpp  notificationpreviewpresenter.h  thermalnotifier.cpp
src/screenlock/: screenlock.cpp  screenlock.h  screenlock.xml
src/touchscreen/: touchscreen.cpp  touchscreen.h  touchscreen_p.h
src/utilities/: qobjectlistmodel.cpp
src/volume/: mcebuttonhandler.cpp  mcebuttonhandler.h  pipewireaudiocontrol.cpp  pipewireaudiocontrol.h  pulseaudiocontrol.cpp  pulseaudiocontrol.h  pulseaudioprivateloop.cpp  pulseaudioprivateloop.h  pulseaudiosinkinputmodel.cpp  pulseaudiosinkinputmodel.h  volumecontrol.cpp  volumecontrol.h
tests/: CMakeLists.txt  common.pri  tests.pro
tests/stubs/: androidprioritystore_stub.h  categorydefinitionstore_stub.h  closeeventeater_stub.h  homewindow.cpp  lipstickcompositor_stub.h  methodcall.h  ngfclient_stub.h  notificationfeedbackplayer_stub.h  notificationlistmodel_stub.h  notificationmanager_stub.h  notificationmanageradaptor_stub.h  parameter.h  pulseaudiocontrol_stub.h  qmdisplaystate_stub.h  qmthermal_stub.h  qobjectlistmodel_stub.h  screenlock_stub.h  screenlockadaptor_stub.h  stubbase.cpp  stubbase.h  thermal_stub.h  touchscreen_stub.h
tests/ut_categorydefinitionstore/: ut_categorydefinitionstore.h
tests/ut_closeeventeater/: CMakeLists.txt
tests/ut_launchermodel/: CMakeLists.txt  ut_launchermodel.cpp  ut_launchermodel.pro
tests/ut_lipsticknotification/: CMakeLists.txt  ut_lipsticknotification.cpp
tests/ut_lipsticksettings/: CMakeLists.txt  ut_lipsticksettings.cpp
tests/ut_notificationfeedbackplayer/: CMakeLists.txt  ut_notificationfeedbackplayer.cpp  ut_notificationfeedbackplayer.h  ut_notificationfeedbackplayer.pro
tests/ut_notificationlistmodel/: CMakeLists.txt  ut_notificationlistmodel.cpp
tests/ut_notificationmanager/: CMakeLists.txt  ut_notificationmanager.cpp  ut_notificationmanager.h
tests/ut_notificationpreviewpresenter/: CMakeLists.txt  ut_notificationpreviewpresenter.cpp  ut_notificationpreviewpresenter.h  ut_notificationpreviewpresenter.pro
tests/ut_qobjectlistmodel/: CMakeLists.txt  ut_qobjectlistmodel.cpp
tests/ut_screenlock/: CMakeLists.txt  ut_screenlock.cpp  ut_screenlock.h
tests/ut_shutdownscreen/: CMakeLists.txt  ut_shutdownscreen.cpp  ut_shutdownscreen.h  ut_shutdownscreen.pro
tests/ut_thermalnotifier/: ut_thermalnotifier.cpp  ut_thermalnotifier.h
tests/ut_touchscreen/: CMakeLists.txt  ut_touchscreen.cpp
tests/ut_usbmodeselector/: CMakeLists.txt  qusbmoded_stub.cpp  ut_usbmodeselector.cpp  ut_usbmodeselector.h  ut_usbmodeselector.pro
tests/ut_volumecontrol/: CMakeLists.txt  ut_volumecontrol.cpp  ut_volumecontrol.h
tools/: CMakeLists.txt
tools/notificationtool/: CMakeLists.txt  notificationtool.cpp  notificationtool.pro
tools/screenshottool/: CMakeLists.txt
