add_definitions(-DUNIT_TEST=1)

include_directories(${CMAKE_SOURCE_DIR}/src)
include_directories(${CMAKE_SOURCE_DIR}/src/3rdparty)
include_directories(${CMAKE_SOURCE_DIR}/src/compositor)
include_directories(${CMAKE_SOURCE_DIR}/src/components)
include_directories(${CMAKE_SOURCE_DIR}/src/devicestate)
include_directories(${CMAKE_SOURCE_DIR}/src/notifications)
include_directories(${CMAKE_SOURCE_DIR}/src/screenlock)
include_directories(${CMAKE_SOURCE_DIR}/src/touchscreen)
include_directories(${CMAKE_SOURCE_DIR}/src/utilities)
include_directories(${CMAKE_SOURCE_DIR}/src/volume)

include_directories(${CMAKE_SOURCE_DIR}/tests)
include_directories(${CMAKE_SOURCE_DIR}/tests/stubs)

add_subdirectory(ut_closeeventeater)
add_subdirectory(ut_launchermodel)
add_subdirectory(ut_lipsticknotification)
add_subdirectory(ut_lipsticksettings)
add_subdirectory(ut_notificationfeedbackplayer)
add_subdirectory(ut_notificationlistmodel)
add_subdirectory(ut_notificationmanager)
add_subdirectory(ut_notificationpreviewpresenter)
add_subdirectory(ut_qobjectlistmodel)
add_subdirectory(ut_screenlock)
add_subdirectory(ut_shutdownscreen)
add_subdirectory(ut_touchscreen)
add_subdirectory(ut_usbmodeselector)
add_subdirectory(ut_volumecontrol)

